# Middleware_IoT

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
deployment/: droplets.tf  main.tf  outputs.tf
middleware/: Dockerfile  Makefile  client  client.c  client_example.py  client_loop.sh  client_utils.c  client_utils.h  constants.h  get_logs.py  loop_client.sh  master  master.c  master_utils.c  master_utils.h  metadata_utils.c  metadata_utils.h  plot_logs.py  queue.c  queue.h  run_tests_client.sh  servers_setup.py  set_env.sh  socket_utils.c  socket_utils.h  ssh.py  ssh_connect.py  start_master.sh  start_worker.sh  threading_utils.c  threading_utils.h  worker  worker.c  worker_utils.c  worker_utils.h
scripts/: apcs.csv  get_logs.py  run_tests_client.sh  servers_setup.py  ssh.py  start_master.sh  start_worker.sh  test.py
